# intertidal-soil-py

./: LICENSE  README.md  pyproject.toml
examples/giralia/: README.md  fetch_weather.py  giralia_config.py  run_albedo_comparison.py  run_heat_diagnostic.py  run_multi_site.py  run_single_site.py
examples/giralia/data/: giralia_weather.csv  giralia_weather_2016.csv  giralia_weather_2017.csv  giralia_weather_2018.csv  giralia_weather_2019.csv  giralia_weather_2020.csv
examples/giralia/hydro/: hydro_info_at_Point1.csv  hydro_info_at_Point10.csv  hydro_info_at_Point11.csv  hydro_info_at_Point12.csv  hydro_info_at_Point2.csv  hydro_info_at_Point3.csv  hydro_info_at_Point4.csv  hydro_info_at_Point5.csv  hydro_info_at_Point6.csv  hydro_info_at_Point7.csv  hydro_info_at_Point8.csv  hydro_info_at_Point9.csv
intertidal_soil/: __init__.py  atmosphere.py  drivers.py  macropore.py  model.py  moisture.py  soil_params.py  surface_energy.py  temperature.py  water_table.py
intertidal_soil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
